--- a/ble-cycle-client.ioc
+++ b/ble-cycle-client.ioc
@@ -467,8 +467,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=BLE_CLIENT.ioc
-ProjectManager.ProjectName=BLE_CLIENT
+ProjectManager.ProjectFileName=ble-cycle-client.ioc
+ProjectManager.ProjectName=ble-cycle-client
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -573,7 +573,7 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-STM32_WPAN.BLE_APPLICATION_TYPE=BLE_CLIENT_PROFILE
+STM32_WPAN.BLE_APPLICATION_TYPE=ble-cycle-client_PROFILE
 STM32_WPAN.BLE_DBG_APP_EN=1
 STM32_WPAN.CFG_DEBUG_APP_TRACE=1
 STM32_WPAN.CFG_DEBUG_BLE_TRACE=1
